force-app/main/default/objects/Referencial__c/Referencial__c.object-meta.xml
<CustomObject>
    <description>Objet contenant le référentiel de KparK (Documents, MF, CGV, autre etc...)</description>
    <label>Référentiel</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Référentiels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>