force-app/main/default/objects/Referencial__c/fields/activeSource__c.field-meta.xml
<CustomField>
    <fullName>activeSource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actif/Passif</label>
    <type>Checkbox</type>
</CustomField>