force-app/main/default/objects/Referencial__c/fields/advancePayment1__c.field-meta.xml
<CustomField>
    <fullName>advancePayment1__c</fullName>
    <label>Acompte (Contrat)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>