force-app/main/default/objects/Referencial__c/fields/advancePayment2__c.field-meta.xml
<CustomField>
    <fullName>advancePayment2__c</fullName>
    <label>Acompte (MAD)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>