force-app/main/default/objects/Referencial__c/fields/approvalQueue__c.field-meta.xml
<CustomField>
    <fullName>approvalQueue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File d&apos;attente d&apos;approbation</label>
    <type>Checkbox</type>
</CustomField>