force-app/main/default/objects/Referencial__c/fields/bankRemittance__c.field-meta.xml
<CustomField>
    <fullName>bankRemittance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilisé sur le référentiel Mode de règlement, information destinée à la création des écritures comptables</description>
    <label>Remise en banque</label>
    <type>Checkbox</type>
</CustomField>