force-app/main/default/objects/Referencial__c/fields/bankSeizure__c.field-meta.xml
<CustomField>
    <fullName>bankSeizure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saisie banque</label>
    <type>Checkbox</type>
</CustomField>