force-app/main/default/objects/Referencial__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SourceCategory</valueSetName>
    </valueSet>
</CustomField>