force-app/main/default/objects/Referencial__c/fields/chatterGroup__c.field-meta.xml
<CustomField>
    <fullName>chatterGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Groupe Chatter</label>
    <type>Checkbox</type>
</CustomField>