force-app/main/default/objects/Referencial__c/fields/concertedDelay__c.field-meta.xml
<CustomField>
    <fullName>concertedDelay__c</fullName>
    <label>Délai concerté</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>