force-app/main/default/objects/Referencial__c/fields/contractualDelay__c.field-meta.xml
<CustomField>
    <fullName>contractualDelay__c</fullName>
    <label>Délai contractuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>