force-app/main/default/objects/Referencial__c/fields/criticity__c.field-meta.xml
<CustomField>
    <fullName>criticity__c</fullName>
    <label>Criticité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Criticity</valueSetName>
    </valueSet>
</CustomField>