force-app/main/default/objects/Referencial__c/fields/delayBeforeControl__c.field-meta.xml
<CustomField>
    <fullName>delayBeforeControl__c</fullName>
    <inlineHelpText>Délai en jours antre la vente et le rendez-vous de contrôle/métrage</inlineHelpText>
    <label>Délai avant contrôle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>