force-app/main/default/objects/Referencial__c/fields/dependancy__c.field-meta.xml
<CustomField>
    <fullName>dependancy__c</fullName>
    <label>Dépendance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <label>Sans</label>
            </value>
            <value>
                <fullName>CreditMemo</fullName>
                <label>Avoir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>