force-app/main/default/objects/Referencial__c/fields/electronicSignatureLevel__c.field-meta.xml
<CustomField>
    <fullName>electronicSignatureLevel__c</fullName>
    <inlineHelpText>Type et niveau d&apos;utilisation de la signature électronique (vide si pas utilisateur de cette solution)</inlineHelpText>
    <label>Niveau signature électronique</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SFDCLevel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>