force-app/main/default/objects/Referencial__c/fields/expirationAction__c.field-meta.xml
<CustomField>
    <fullName>expirationAction__c</fullName>
    <label>Action d&apos;expiration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpirationAction</valueSetName>
    </valueSet>
</CustomField>