force-app/main/default/objects/Referencial__c/fields/expirationDay__c.field-meta.xml
<CustomField>
    <fullName>expirationDay__c</fullName>
    <label>Jour d&apos;expiration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DayOfWeek</valueSetName>
    </valueSet>
</CustomField>