force-app/main/default/objects/Referencial__c/fields/expirationDelay__c.field-meta.xml
<CustomField>
    <fullName>expirationDelay__c</fullName>
    <description>Délai en jours avant expiration de la fiche</description>
    <label>Délai d&apos;expiration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>