force-app/main/default/objects/Referencial__c/fields/financingType__c.field-meta.xml
<CustomField>
    <fullName>financingType__c</fullName>
    <label>Type de financement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinancingType</valueSetName>
    </valueSet>
</CustomField>