force-app/main/default/objects/Referencial__c/fields/forbiddenAdditionalDiscount__c.field-meta.xml
<CustomField>
    <fullName>forbiddenAdditionalDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remise complémentaire interdite</label>
    <type>Checkbox</type>
</CustomField>