force-app/main/default/objects/Referencial__c/fields/forbiddenEnseignDiscount__c.field-meta.xml
<CustomField>
    <fullName>forbiddenEnseignDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remise enseigne interdite</label>
    <type>Checkbox</type>
</CustomField>