force-app/main/default/objects/Referencial__c/fields/FSLLevel__c.field-meta.xml
<CustomField>
    <fullName>FSLLevel__c</fullName>
    <inlineHelpText>Type et niveau d&apos;utilisation de FSL (vide si pas utilisateur de cette solution, gestion = planification + ressource)</inlineHelpText>
    <label>Niveau FSL</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SFDCLevel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestion</fullName>
            </value>
            <value>
                <fullName>Planification</fullName>
            </value>
            <value>
                <fullName>Ressource</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>