force-app/main/default/objects/Referencial__c/fields/fundingAgency__c.field-meta.xml
<CustomField>
    <fullName>fundingAgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisme de financement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>FundingOrganization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Modes de financement</relationshipLabel>
    <relationshipName>FinancingMethods</relationshipName>
    <type>Lookup</type>
</CustomField>