force-app/main/default/objects/Referencial__c/fields/ganttName__c.field-meta.xml
<CustomField>
    <fullName>ganttName__c</fullName>
    <label>Nom Gantt (FSL)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>