force-app/main/default/objects/Referencial__c/fields/hierarchyLevel__c.field-meta.xml
<CustomField>
    <fullName>hierarchyLevel__c</fullName>
    <description>Permet de connaitre sa position de l&apos;enregistrement dans la hiérarchie</description>
    <formula>IF(ISBLANK(parent__r.Id),0,
IF(ISBLANK(parent__r.parent__r.Id),1,
IF(ISBLANK(parent__r.parent__r.parent__r.Id),2,
IF(ISBLANK(parent__r.parent__r.parent__r.parent__r.Id),3,
IF(ISBLANK(parent__r.parent__r.parent__r.parent__r.parent__r.Id),4,
IF(ISBLANK(parent__r.parent__r.parent__r.parent__r.parent__r.parent__r.Id),5,
6
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Niveau hiérarchie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>