force-app/main/default/objects/Referencial__c/fields/iban__c.field-meta.xml
<CustomField>
    <fullName>iban__c</fullName>
    <label>IBAN</label>
    <length>35</length>
    <type>Text</type>
</CustomField>