force-app/main/default/objects/Referencial__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <label>Image</label>
    <type>Url</type>
</CustomField>