force-app/main/default/objects/Referencial__c/fields/immediateAction__c.field-meta.xml
<CustomField>
    <fullName>immediateAction__c</fullName>
    <label>Action immédiate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpirationAction</valueSetName>
    </valueSet>
</CustomField>