force-app/main/default/objects/Referencial__c/fields/isCommunicableToCustomer__c.field-meta.xml
<CustomField>
    <fullName>isCommunicableToCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si cochée, un email/courrier sera envoyé automatiquement au client</description>
    <inlineHelpText>Si cochée, un email/courrier sera envoyé automatiquement au client</inlineHelpText>
    <label>Communicable au client</label>
    <type>Checkbox</type>
</CustomField>