force-app/main/default/objects/Referencial__c/fields/isWaitingForCustomer__c.field-meta.xml
<CustomField>
    <fullName>isWaitingForCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si cochée, l&apos;email/courrier demandera au client de fournir les documents/informations attendus, sinon il demandera de prendre contact avec K par K</description>
    <inlineHelpText>Si cochée, l&apos;email/courrier demandera au client de fournir les documents/informations attendus, sinon il demandera de prendre contact avec K par K</inlineHelpText>
    <label>En attente client</label>
    <type>Checkbox</type>
</CustomField>