force-app/main/default/objects/Referencial__c/fields/jobHierarchy__c.field-meta.xml
<CustomField>
    <fullName>jobHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiérarchie métier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>JobHierarchy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Métiers</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>