force-app/main/default/objects/Referencial__c/fields/labelSeizure__c.field-meta.xml
<CustomField>
    <fullName>labelSeizure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saisie libellé</label>
    <type>Checkbox</type>
</CustomField>