force-app/main/default/objects/Referencial__c/fields/margin__c.field-meta.xml
<CustomField>
    <fullName>margin__c</fullName>
    <label>Marge</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>