force-app/main/default/objects/Referencial__c/fields/maxCommercialDelay__c.field-meta.xml
<CustomField>
    <fullName>maxCommercialDelay__c</fullName>
    <label>Délai commercial max.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>