force-app/main/default/objects/Referencial__c/fields/maxPayableAmount__c.field-meta.xml
<CustomField>
    <fullName>maxPayableAmount__c</fullName>
    <label>Montant max. payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>