force-app/main/default/objects/Referencial__c/fields/MCLevel__c.field-meta.xml
<CustomField>
    <fullName>MCLevel__c</fullName>
    <inlineHelpText>Type et niveau d&apos;utilisation de Marketings Cloud (vide si pas utilisateur de cette solution)</inlineHelpText>
    <label>Niveau Marketing Cloud</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SFDCLevel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Utilisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>