force-app/main/default/objects/Referencial__c/fields/minCommercialDelay__c.field-meta.xml
<CustomField>
    <fullName>minCommercialDelay__c</fullName>
    <label>Délai commercial min.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>