force-app/main/default/objects/Referencial__c/fields/minPayableAmount__c.field-meta.xml
<CustomField>
    <fullName>minPayableAmount__c</fullName>
    <label>Montant min. payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>