force-app/main/default/objects/Referencial__c/fields/monthlyPayment__c.field-meta.xml
<CustomField>
    <fullName>monthlyPayment__c</fullName>
    <label>Nombre de mensualités</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>