force-app/main/default/objects/Referencial__c/fields/option__c.field-meta.xml
<CustomField>
    <fullName>option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Champ permettant de stocker l&apos;option</description>
    <label>Option</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Coefficients acoustiques (Option)</relationshipLabel>
    <relationshipName>ReferencialOptionAcousticsCoefficients</relationshipName>
    <type>Lookup</type>
</CustomField>