force-app/main/default/objects/Referencial__c/fields/orderNonComplianceType__c.field-meta.xml
<CustomField>
    <fullName>orderNonComplianceType__c</fullName>
    <label>Type de non-conformité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Impossibility</fullName>
                <label>Impossibilité</label>
            </value>
            <value>
                <fullName>Indispensable</fullName>
                <label>Incontournable</label>
            </value>
            <value>
                <fullName>Instance</fullName>
                <label>Instance en cours</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>