force-app/main/default/objects/Referencial__c/fields/parent__c.field-meta.xml
<CustomField>
    <fullName>parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <valueField>Referencial__c.RecordTypeId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Référentiels enfants</relationshipLabel>
    <relationshipName>childReferencials</relationshipName>
    <type>Lookup</type>
</CustomField>