force-app/main/default/objects/Referencial__c/fields/paymentType__c.field-meta.xml
<CustomField>
    <fullName>paymentType__c</fullName>
    <description>Utilisé sur le référentiel Mode de règlement, information destinée à la création des écritures comptables</description>
    <label>Type de règlement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>paymentType</valueSetName>
    </valueSet>
</CustomField>