force-app/main/default/objects/Referencial__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Technical use to Skyvia synch with KBMax</description>
    <formula>product__r.ProductCode</formula>
    <inlineHelpText>Technical use to Skyvia synch with KBMax</inlineHelpText>
    <label>[#] Product Code</label>
    <type>Text</type>
</CustomField>