force-app/main/default/objects/Referencial__c/fields/productSubFamily__c.field-meta.xml
<CustomField>
    <fullName>productSubFamily__c</fullName>
    <label>Sous-famille du produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>