force-app/main/default/objects/Referencial__c/fields/productSubMaterial__c.field-meta.xml
<CustomField>
    <fullName>productSubMaterial__c</fullName>
    <label>Sous-matière du produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>