force-app/main/default/objects/Referencial__c/fields/providerDelayType__c.field-meta.xml
<CustomField>
    <fullName>providerDelayType__c</fullName>
    <label>Type de délai fournisseur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProviderDelayType</valueSetName>
    </valueSet>
</CustomField>