force-app/main/default/objects/Referencial__c/fields/publicGroup__c.field-meta.xml
<CustomField>
    <fullName>publicGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Groupe public</label>
    <type>Checkbox</type>
</CustomField>