force-app/main/default/objects/Referencial__c/fields/queue__c.field-meta.xml
<CustomField>
    <fullName>queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File d&apos;attente</label>
    <type>Checkbox</type>
</CustomField>