force-app/main/default/objects/Referencial__c/fields/refundType__c.field-meta.xml
<CustomField>
    <fullName>refundType__c</fullName>
    <label>Type de remboursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CheckRequest</fullName>
                <label>Demande de chèque</label>
            </value>
            <value>
                <fullName>Refund</fullName>
                <label>Remboursement siège</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>