force-app/main/default/objects/Referencial__c/fields/requiredExternalBankAccount__c.field-meta.xml
<CustomField>
    <fullName>requiredExternalBankAccount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Compte bancaire externe requis</label>
    <type>Checkbox</type>
</CustomField>