force-app/main/default/objects/Referencial__c/fields/responsability__c.field-meta.xml
<CustomField>
    <fullName>responsability__c</fullName>
    <label>Responsabilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductResponsibility</valueSetName>
    </valueSet>
</CustomField>