force-app/main/default/objects/Referencial__c/fields/serviceTerritory__c.field-meta.xml
<CustomField>
    <fullName>serviceTerritory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Territoire de service</label>
    <type>Checkbox</type>
</CustomField>