force-app/main/default/objects/Referencial__c/fields/SFDCLevel__c.field-meta.xml
<CustomField>
    <fullName>SFDCLevel__c</fullName>
    <inlineHelpText>Type et niveau d&apos;utilisation de Salesforce (vide si pas utilisateur de cette solution)</inlineHelpText>
    <label>Niveau Salesforce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration - Fonctionnel</fullName>
            </value>
            <value>
                <fullName>Administration - Système</fullName>
            </value>
            <value>
                <fullName>Données - Consultation</fullName>
            </value>
            <value>
                <fullName>Données - Gestion</fullName>
            </value>
            <value>
                <fullName>Référentiels</fullName>
            </value>
            <value>
                <fullName>Référentiels + Données</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>