force-app/main/default/objects/Referencial__c/fields/singleEntity__c.field-meta.xml
<CustomField>
    <fullName>singleEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entité unique</label>
    <type>Checkbox</type>
</CustomField>