force-app/main/default/objects/Referencial__c/fields/specificAccountingEntry__c.field-meta.xml
<CustomField>
    <fullName>specificAccountingEntry__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Les pièces comptables (ex: encaissement) avec ce mode de règlement seront associéea à une écriture comptable spécifique sinon elles seront regroupées au sein d&apos;une même écriture.

L&apos;objectif est d&apos;être conforme aux lignes du relevé bancaire:
- un virement client apparaît sur une ligne spécifique
- un chèque client apparaîtra groupé avec tous les autres chèques remis en banque en même temps</inlineHelpText>
    <label>Ecriture comptable spécifique</label>
    <type>Checkbox</type>
</CustomField>