force-app/main/default/objects/Referencial__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date de début de validité</description>
    <label>Début de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>