force-app/main/default/objects/Referencial__c/fields/subCategory__c.field-meta.xml
<CustomField>
    <fullName>subCategory__c</fullName>
    <label>Sous-catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SourceSubcategory</valueSetName>
    </valueSet>
</CustomField>