force-app/main/default/objects/Referencial__c/fields/unitaryEntry__c.field-meta.xml
<CustomField>
    <fullName>unitaryEntry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilisé sur le référentiel Mode de règlement, information destinée à la création des écritures comptables</description>
    <label>Ecriture unitaire</label>
    <type>Checkbox</type>
</CustomField>