force-app/main/default/objects/Referencial__c/fields/unpaidSeizure__c.field-meta.xml
<CustomField>
    <fullName>unpaidSeizure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saisie impayé</label>
    <type>Checkbox</type>
</CustomField>