force-app/main/default/objects/Referencial__c/fields/usableForAfterSalesService__c.field-meta.xml
<CustomField>
    <fullName>usableForAfterSalesService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilisable pour le SAV</label>
    <type>Checkbox</type>
</CustomField>