force-app/main/default/objects/Referencial__c/fields/usableForSales__c.field-meta.xml
<CustomField>
    <fullName>usableForSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilisable pour la vente</label>
    <type>Checkbox</type>
</CustomField>