force-app/main/default/objects/Referencial__c/fields/userRole__c.field-meta.xml
<CustomField>
    <fullName>userRole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rôle utilisateur</label>
    <type>Checkbox</type>
</CustomField>