force-app/main/default/objects/Referencial__c/fields/valueRA__c.field-meta.xml
<CustomField>
    <fullName>valueRA__c</fullName>
    <description>Affaiblissement acoustique pour les bruits intérieurs</description>
    <inlineHelpText>Affaiblissement acoustique pour les bruits intérieurs</inlineHelpText>
    <label>Ra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>