force-app/main/default/objects/Referencial__c/fields/valueRATR__c.field-meta.xml
<CustomField>
    <fullName>valueRATR__c</fullName>
    <description>Affaiblissement acoustique pour les bruits de la route</description>
    <inlineHelpText>Affaiblissement acoustique pour les bruits de la route</inlineHelpText>
    <label>Ratr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>