force-app/main/default/objects/Referencial__c/fields/valueRW__c.field-meta.xml
<CustomField>
    <fullName>valueRW__c</fullName>
    <description>Affaiblissement acoustique</description>
    <inlineHelpText>Affaiblissement acoustique</inlineHelpText>
    <label>Rw</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>