force-app/main/default/objects/Referencial__c/fields/visual__c.field-meta.xml
<CustomField>
    <fullName>visual__c</fullName>
    <formula>IMAGE( image__c, &quot;&quot;, 75, 75)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image (Visuel)</label>
    <type>Text</type>
</CustomField>