force-app/main/default/objects/Referencial__c/recordTypes/BankAccount.recordType-meta.xml
<RecordType>
    <fullName>BankAccount</fullName>
    <active>true</active>
    <description>Informations pour les comptes bancaire des entités KparK</description>
    <label>Compte bancaire</label>
</RecordType>