force-app/main/default/objects/Referencial__c/recordTypes/CatalogMargin.recordType-meta.xml
<RecordType>
    <fullName>CatalogMargin</fullName>
    <active>true</active>
    <label>Marge catalogue</label>
</RecordType>