force-app/main/default/objects/Referencial__c/recordTypes/Certification.recordType-meta.xml
<RecordType>
    <fullName>Certification</fullName>
    <active>true</active>
    <description>Liste des certifications pour les une entité (RGE, Qualibat, etc...) ou les produits (CE, NF, Cekal, etc...)</description>
    <label>Certification</label>
</RecordType>