force-app/main/default/objects/Referencial__c/recordTypes/CustomerCancellationReason.recordType-meta.xml
<RecordType>
    <fullName>CustomerCancellationReason</fullName>
    <active>true</active>
    <label>Motif d&apos;annulation client</label>
</RecordType>