force-app/main/default/objects/Referencial__c/recordTypes/EntityType.recordType-meta.xml
<RecordType>
    <fullName>EntityType</fullName>
    <active>true</active>
    <label>Type d&apos;entité</label>
</RecordType>