force-app/main/default/objects/Referencial__c/recordTypes/ExpectedDocument.recordType-meta.xml
<RecordType>
    <fullName>ExpectedDocument</fullName>
    <active>true</active>
    <label>Document attendu</label>
</RecordType>