force-app/main/default/objects/Referencial__c/recordTypes/FinancingMethod.recordType-meta.xml
<RecordType>
    <fullName>FinancingMethod</fullName>
    <active>true</active>
    <label>Mode de financement</label>
</RecordType>