force-app/main/default/objects/Referencial__c/recordTypes/Job.recordType-meta.xml
<RecordType>
    <fullName>Job</fullName>
    <active>true</active>
    <label>Métier</label>
</RecordType>