force-app/main/default/objects/Referencial__c/recordTypes/JobHierarchy.recordType-meta.xml
<RecordType>
    <fullName>JobHierarchy</fullName>
    <active>true</active>
    <label>Hiérarchie métier</label>
</RecordType>