force-app/main/default/objects/Referencial__c/recordTypes/OrderNonComplianceType.recordType-meta.xml
<RecordType>
    <fullName>OrderNonComplianceType</fullName>
    <active>true</active>
    <description>Type de non-conformité commande avec ses spécificités (criticité, date et délai d&apos;expiration, action d&apos;expiration)</description>
    <label>Type de non-conformité commande</label>
</RecordType>