force-app/main/default/objects/Referencial__c/recordTypes/PaymentMethod.recordType-meta.xml
<RecordType>
    <fullName>PaymentMethod</fullName>
    <active>true</active>
    <label>Mode de règlement</label>
</RecordType>