force-app/main/default/objects/Referencial__c/recordTypes/ProductAcousticCoefficient.recordType-meta.xml
<RecordType>
    <fullName>ProductAcousticCoefficient</fullName>
    <active>true</active>
    <description>Objets stockant les coefficients acoustiques des produits et des options</description>
    <label>Coefficient acoustique</label>
</RecordType>