force-app/main/default/objects/Referencial__c/recordTypes/ProductFeature.recordType-meta.xml
<RecordType>
    <fullName>ProductFeature</fullName>
    <active>true</active>
    <description>Type pour décrire les caractéristiques d&apos;un produit</description>
    <label>Caractéristique produit</label>
</RecordType>