force-app/main/default/objects/Referencial__c/recordTypes/ProviderDeliveryDelay.recordType-meta.xml
<RecordType>
    <fullName>ProviderDeliveryDelay</fullName>
    <active>true</active>
    <label>Délai de livraison fournisseur</label>
</RecordType>